--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-paginate": "^6.3.0",
     "react-scripts": "3.1.2"
   },
   "scripts": {
@@ -27,5 +28,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "bootstrap": "^4.3.1",
+    "lodash": "^4.17.15"
   }
 }
